--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <main class="bloco">
-        <form id="formulario" method="GET" action="cadastroEnviado.html">
+        <form id="formulario" method="GET" action="cadastro-enviado.html">
             <h1>Crie uma conta</h1>
 
             <input id="nome" type="text" name="nome" placeholder="Nome Completo" required>
